# Sun-Glare-Aware-Router

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  app.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.streamlit/: config.toml  secrets.toml.example
src/: __init__.py  cache.py  config.py  geocoding.py  http_client.py  i18n.py  mapview.py  models.py  pickers.py  route_time_search.py  routing.py  scoring.py  solar.py  time_window_ui.py  timezones.py  utils.py
tests/: test_app_api_usage.py  test_app_defaults.py  test_app_layout.py  test_app_persistence.py  test_config_security.py  test_i18n.py  test_location_controls.py  test_mapview.py  test_picker_state.py  test_providers.py  test_repo_readiness.py  test_route_date_range_search.py  test_route_time_search.py  test_scoring.py  test_time_window_ui.py  test_utils.py
